@@ -1,9 +1,20 @@
 Pending changes in the mainline
 ===============================
 
+
 * The configuration can be splitted into several files stored inside the same folder
 * Custom setting of the local AET during C-Store SCU (both in Lua and in the REST API)
+
+Plugins
+-------
+
 * Plugins can retrieve the configuration file directly as a JSON string
+* Plugins can send answers as multipart messages
+
+Fixes
+-----
+
+* Fix compatibility issues for C-Find SCU to Siemens Syngo.Via modalities SCP
 * Fix issue 35 (Characters in PatientID string are not protected for C-Find)
 * Fix issue 37 (Hyphens trigger range query even if datatype does not support ranges)
 
